<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_marginHorizontal="24dp"
    tools:context=".ui.fragments.LoginFragment">

        <EditText
            android:id="@+id/username_field"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:hint="@string/username"
            android:autofillHints=""
            android:inputType="textNoSuggestions" />

        <EditText
            android:id="@+id/password_field"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:hint="@string/password"
            android:autofillHints=""
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login"/>

</LinearLayout>